Preparando deploy com pacotes atualizados

--- a/public/contato.html
+++ b/public/contato.html
@@ -168,7 +168,7 @@
 
 			<li class="NavItem">
 
-				<a href="20-anos"><span>20 Anos</span></a>
+				<a href="#"><span>20 Anos</span></a>
 
 			</li>
 
