--- a/public/tickets-old.html
+++ b/public/tickets-old.html
@@ -26,12 +26,6 @@
 <script src="dist/js/classList.min.js"></script>
 <![endif]-->
 
-<style>
-	.Tickets h1, h2, h3 {
-		font-family: inherit !important;
-	}
-</style>
-
 <body class="tk-proxima-nova">
 
 <script>
@@ -73,7 +67,7 @@
 			Local: Palmital - São Paulo</p>
 
 	</div>
-
+	
 </header>
 
 <div id="tickets" class="Tickets">
@@ -84,7 +78,7 @@
 
 		<div class="Tickets-options">
 
-			<div class="TicketsOption" data-option-id="TNVPACK_M" data-price="378.00" data-description="Pacote Masculino + Abadá">
+			<div class="TicketsOption" data-option-id="TNVPACKPROMO_M" data-price="324.00" data-description="Pacote Masculino + Abadá | Pacote Promocional">
 
 				<div class="TicketsOption-inner">
 
@@ -92,12 +86,12 @@
 
 						<div class="TicketsOption-primary">
 
-							<h2 class="TicketOption-title">Pacote Masculino + Abadá</h2>
+							<h2 class="TicketOption-title">Pacote Masculino + Abadá | Pacote Promocional</h2>
 
 							<div class="TicketOption-info">
 
-								<span class="TicketOption-price">R$350,00</span>
-								<span class="TicketOption-taxFee">(+R$28,00 TAXA)</span> <!-- 7,999% ~ 8% -->
+								<span class="TicketOption-price">R$300,00</span>
+								<span class="TicketOption-taxFee">(+R$24,00 TAXA)</span> <!-- 7,999% ~ 8% -->
 
 							</div>
 
@@ -149,6 +143,7 @@
 
 							<p>O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
+								Aproveite o preço promocional :)
 								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
 
 						</div>
@@ -166,7 +161,7 @@
 
 			</div>
 
-			<div class="TicketsOption" data-option-id="TNVPACK_F" data-price="237.60" data-description="Pacote Feminino + Abadá">
+			<div class="TicketsOption" data-option-id="TNVPACKPROMO_F" data-price="194.39" data-description="Pacote Feminino + Abadá | Pacote Promocional">
 
 				<div class="TicketsOption-inner">
 
@@ -174,12 +169,12 @@
 
 						<div class="TicketsOption-primary">
 
-							<h2 class="TicketOption-title">Pacote Feminino + Abadá</h2>
+							<h2 class="TicketOption-title">Pacote Feminino + Abadá | Pacote Promocional</h2>
 
 							<div class="TicketOption-info">
 
-								<span class="TicketOption-price">R$220,00</span>
-								<span class="TicketOption-taxFee">(+R$17,60 TAXA)</span> <!-- 7,999% ~ 8% -->
+								<span class="TicketOption-price">R$180,00</span>
+								<span class="TicketOption-taxFee">(+R$14,39 TAXA)</span> <!-- 7,999% ~ 8% -->
 
 							</div>
 
@@ -231,249 +226,7 @@
 
 							<p>O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
-
-						</div>
-
-						<div class="TicketsOption-expand">
-
-							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
-							<a class="TicketsOptions-showLess">Ocultar Informações</a>
-
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="TicketsOption" data-option-id="TNVDIAR_M" data-price="86.40" data-description="Diária Masculina">
-
-				<div class="TicketsOption-inner">
-
-					<div class="TicketsOption-header">
-
-						<div class="TicketsOption-primary">
-
-							<h2 class="TicketOption-title">Diária Masculina</h2>
-
-							<div class="TicketOption-info">
-
-								<span class="TicketOption-price">R$80,00</span>
-								<span class="TicketOption-taxFee">(+R$6,40 TAXA)</span> <!-- 7,999% ~ 8% -->
-
-							</div>
-
-						</div>
-
-						<div class="TicketsOption-secondary">
-
-							<div class="TicketsOption-quantity">
-
-								<div class="Select Select--ticketOption" data-name="select-03">
-
-									<div class="Select-inner">
-
-										<div class="Select-value"></div>
-										<div class="Select-arrow">
-
-											<span class="icon-keyboard_arrow_down"></span>
-
-										</div>
-
-										<select class="Select-select" name="quanity" id="q03">
-
-											<option value="0">0</option>
-											<option value="1">1</option>
-											<option value="2">2</option>
-											<option value="3">3</option>
-											<option value="4">4</option>
-											<option value="5">5</option>
-											<option value="6">6</option>
-											<option value="7">7</option>
-											<option value="8">8</option>
-											<option value="9">9</option>
-
-										</select>
-
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-					<div class="TicketsOption-footer">
-
-						<div class="TicketsOption-description">
-
-							<p>A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
-
-						</div>
-
-						<div class="TicketsOption-expand">
-
-							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
-							<a class="TicketsOptions-showLess">Ocultar Informações</a>
-
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="TicketsOption" data-option-id="TNVDIAR_F" data-price="64.80" data-description="Diária Feminina">
-
-				<div class="TicketsOption-inner">
-
-					<div class="TicketsOption-header">
-
-						<div class="TicketsOption-primary">
-
-							<h2 class="TicketOption-title">Diária Feminina</h2>
-
-							<div class="TicketOption-info">
-
-								<span class="TicketOption-price">R$60,00</span>
-								<span class="TicketOption-taxFee">(+R$4,80 TAXA)</span> <!-- 7,999% ~ 8% -->
-
-							</div>
-
-						</div>
-
-						<div class="TicketsOption-secondary">
-
-							<div class="TicketsOption-quantity">
-
-								<div class="Select Select--ticketOption" data-name="select-04">
-
-									<div class="Select-inner">
-
-										<div class="Select-value"></div>
-										<div class="Select-arrow">
-
-											<span class="icon-keyboard_arrow_down"></span>
-
-										</div>
-
-										<select class="Select-select" name="quanity" id="q04">
-
-											<option value="0">0</option>
-											<option value="1">1</option>
-											<option value="2">2</option>
-											<option value="3">3</option>
-											<option value="4">4</option>
-											<option value="5">5</option>
-											<option value="6">6</option>
-											<option value="7">7</option>
-											<option value="8">8</option>
-											<option value="9">9</option>
-
-										</select>
-
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-					<div class="TicketsOption-footer">
-
-						<div class="TicketsOption-description">
-
-							<p>A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
-
-						</div>
-
-						<div class="TicketsOption-expand">
-
-							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
-							<a class="TicketsOptions-showLess">Ocultar Informações</a>
-
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="TicketsOption" data-option-id="TNVABADA" data-price="32.40" data-description="Abadá">
-
-				<div class="TicketsOption-inner">
-
-					<div class="TicketsOption-header">
-
-						<div class="TicketsOption-primary">
-
-							<h2 class="TicketOption-title">Abadá</h2>
-
-							<div class="TicketOption-info">
-
-								<span class="TicketOption-price">R$30,00</span>
-								<span class="TicketOption-taxFee">(+R$2,40 TAXA)</span> <!-- 7,999% ~ 8% -->
-
-							</div>
-
-						</div>
-
-						<div class="TicketsOption-secondary">
-
-							<div class="TicketsOption-quantity">
-
-								<div class="Select Select--ticketOption" data-name="select-05">
-
-									<div class="Select-inner">
-
-										<div class="Select-value"></div>
-										<div class="Select-arrow">
-
-											<span class="icon-keyboard_arrow_down"></span>
-
-										</div>
-
-										<select class="Select-select" name="quanity" id="q05">
-
-											<option value="0">0</option>
-											<option value="1">1</option>
-											<option value="2">2</option>
-											<option value="3">3</option>
-											<option value="4">4</option>
-											<option value="5">5</option>
-											<option value="6">6</option>
-											<option value="7">7</option>
-											<option value="8">8</option>
-											<option value="9">9</option>
-
-										</select>
-
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-					<div class="TicketsOption-footer">
-
-						<div class="TicketsOption-description">
-
-							<p>Adquira um abadá e compareça a um dos diversos pontos de retirada para garantir sua vestimenta.
+								Aproveite o preço promocional :)
 								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
 
 						</div>
