--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@
 
 				<p>O TNV se orgulha de ser uma "maratona Open Bar". <br> São 66 HORAS de bebida liberada, divididos em 5 dias de festa, montado em um complexo que conta com lounge, banheiros, tendas, palcos, uma praia itinerante com iluminação, muita música e muita gente bonita.</p>
 
-				<p>As bebidas são liberadas à partir da sexta às 14h e indo até às 04h, seguindo assim até na terça às 0h onde a festa acaba temporiariamente até o próximo ano :D</p>
+				<p>As bebidas são liberadas à partir da sexta às 14h e indo até às 04h, seguindo assim até na terça às 0h onde a festa acaba temporariamente até o próximo ano :D</p>
 
 			</div>
 
