--- a/public/contato.html
+++ b/public/contato.html
@@ -174,7 +174,7 @@
 
 			<li class="NavItem">
 
-				<a href="../#sobre"><span>O evento</span></a>
+				<a href="#"><span>O evento</span></a>
 
 			</li>
 
