--- a/public/index-commented.html
+++ b/public/index-commented.html
@@ -208,24 +208,24 @@
 
 		</div>
 
-		<!--<div id="player" class="Player">-->
-		<!---->
-		<!--<div class="Player-background"></div>-->
-		<!---->
-		<!--<div class="Player-inner">-->
-		<!---->
-		<!--<a class="Player-selectArea">-->
-		<!---->
-		<!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30.1 30.1" class="play">-->
-		<!--<path d="M20 14.4l-6.2-4.5c-0.2-0.2-0.5-0.2-0.8-0.1 -0.3 0.1-0.4 0.4-0.4 0.7v9.1c0 0.3 0.2 0.5 0.4 0.7 0.1 0.1 0.2 0.1 0.3 0.1 0.2 0 0.3 0 0.4-0.1l6.2-4.5c0.2-0.1 0.3-0.4 0.3-0.6C20.3 14.8 20.2 14.6 20 14.4z"/>-->
-		<!--<path d="M15 0C6.7 0 0 6.7 0 15c0 8.3 6.7 15 15 15 8.3 0 15-6.7 15-15C30.1 6.7 23.3 0 15 0zM15 27.5c-6.9 0-12.5-5.6-12.5-12.5 0-6.9 5.6-12.5 12.5-12.5 6.9 0 12.5 5.6 12.5 12.5C27.5 21.9 21.9 27.5 15 27.5z"/>-->
-		<!--</svg>-->
-		<!---->
-		<!--</a>-->
-		<!---->
-		<!--</div>-->
-		<!---->
-		<!--</div>-->
+		<div id="player" class="Player">
+
+			<div class="Player-background"></div>
+
+				<div class="Player-inner">
+
+					<a class="Player-selectArea">
+
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30.1 30.1" class="play">
+						<path d="M20 14.4l-6.2-4.5c-0.2-0.2-0.5-0.2-0.8-0.1 -0.3 0.1-0.4 0.4-0.4 0.7v9.1c0 0.3 0.2 0.5 0.4 0.7 0.1 0.1 0.2 0.1 0.3 0.1 0.2 0 0.3 0 0.4-0.1l6.2-4.5c0.2-0.1 0.3-0.4 0.3-0.6C20.3 14.8 20.2 14.6 20 14.4z"/>
+						<path d="M15 0C6.7 0 0 6.7 0 15c0 8.3 6.7 15 15 15 8.3 0 15-6.7 15-15C30.1 6.7 23.3 0 15 0zM15 27.5c-6.9 0-12.5-5.6-12.5-12.5 0-6.9 5.6-12.5 12.5-12.5 6.9 0 12.5 5.6 12.5 12.5C27.5 21.9 21.9 27.5 15 27.5z"/>
+						</svg>
+
+					</a>
+
+			</div>
+
+		</div>
 
 		<div class="Paragraph font-brown-900">
 
@@ -241,19 +241,19 @@
 
 		</div>
 
-		<!--<div class="Paragraph font-brown-900">-->
-		<!---->
-		<!--<div class="Paragraph-inner">-->
-		<!---->
-		<!--<h2 class="font-amber-a700">20 anos de Open Bar</h2>-->
-		<!---->
-		<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores corporis deleniti, deserunt dignissimos esse fuga illo modi necessitatibus nesciunt quisquam recusandae tenetur! Consectetur debitis harum porro reprehenderit tenetur ut.</p>-->
-		<!---->
-		<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores expedita ipsa nam perferendis quibusdam sit soluta, temporibus voluptas voluptates? Alias assumenda beatae dolores hic id ipsa itaque, libero repellendus.</p>-->
-		<!---->
-		<!--</div>-->
-		<!---->
-		<!--</div>-->
+		<div class="Paragraph font-brown-900">
+
+			<div class="Paragraph-inner">
+
+				<h2 class="font-amber-a700">20 anos de Open Bar</h2>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores corporis deleniti, deserunt dignissimos esse fuga illo modi necessitatibus nesciunt quisquam recusandae tenetur! Consectetur debitis harum porro reprehenderit tenetur ut.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores expedita ipsa nam perferendis quibusdam sit soluta, temporibus voluptas voluptates? Alias assumenda beatae dolores hic id ipsa itaque, libero repellendus.</p>
+
+			</div>
+
+		</div>
 
 	</div>
 
@@ -265,20 +265,20 @@
 
 </section>
 
-<!--<footer class="Footer">-->
-<!---->
-<!--<div class="Footer-inner container">-->
-<!---->
-<!--<p>Bloco Tô No Vaso 2016</p>-->
-<!---->
-<!--<p>BERSI SERLINI WINERY</p>-->
-<!--<p>Via Cerreto, 7 - 25050 Provaglio di Iseo (BS)</p>-->
-<!--<p>T. 030 9823338 - F. 030 983234 - visite@bersiserlini.it</p>-->
-<!--<p>www.bersiserlini.it Adoratorio © 2016</p>-->
-<!---->
-<!--</div>-->
-<!---->
-<!--</footer>-->
+<footer class="Footer">
+
+	<div class="Footer-inner container">
+
+	<p>Bloco Tô No Vaso 2016</p>
+
+	<p>BERSI SERLINI WINERY</p>
+	<p>Via Cerreto, 7 - 25050 Provaglio di Iseo (BS)</p>
+	<p>T. 030 9823338 - F. 030 983234 - visite@bersiserlini.it</p>
+	<p>www.bersiserlini.it Adoratorio © 2016</p>
+
+	</div>
+
+</footer>
 
 <script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
