--- a/public/20-anos.html
+++ b/public/20-anos.html
@@ -38,8 +38,7 @@
 				<div class="Yearbook-secondary">
 
 					<h3>2016</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam ea earum eius libero provident quas, quo.
-						A alias autem consequatur ea harum libero magni, maiores minus, molestias, obcaecati rerum?</p>
+					<p>Com 5 noites de temáticas diferentes, o projeto "Thematic Praia" traz a cada dia uma festa diferente. Entre dias a fantasia e dias no Hawai, o carnaval é um dos mais movimentados de todos os tempos. Muita bebida, gente bonita e uma grande vibe positiva.</p>
 
 					<div class="YearbookGallery">
 
@@ -75,7 +74,7 @@
 				<div class="Yearbook-secondary">
 
 					<h3>2015</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi consequatur, dolores dolorum ducimus enim eum ipsum iusto magni optio perspiciatis quaerat quibusdam reiciendis similique sint. Blanditiis cumque delectus laboriosam.</p>
+					<p>O projeto "Neon" traz cores ao carnaval em um clima de festival dos anos 70, com muita tinta distribuída aos foliões, pintamos todo o complexo com muita felicidade e alto astral.</p>
 
 					<div class="YearbookGallery">
 
@@ -95,24 +94,574 @@
 
 		</div>
 
-<!--
-		<div class="Yearbook">
+		<div class="Yearbook Yearbook--right">
 
 			<div class="Yearbook-background"></div>
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
 				</div>
 
 				<div class="Yearbook-secondary">
+
+					<h3>2014</h3>
+					<p>O projeto "Cup Praia" ficou marcado pelo conforto e infraestrutura para que os foliões pudessem ter conforto enquanto curtiam o carnaval no melhor open da Região.</p>
+					<p>Muita música com atrações ao vivo e um lounge exclusivo para aqueles momentos onde a canseira bate.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
 
 				</div>
 
 			</div>
 
 		</div>
--->
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2013</h3>
+					<p>Um grande trio elétrico montado marca o projeto "Roots Praia" tem como temática a cultura Rastafari.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2012</h3>
+					<p>Uma mega estrutura de som e iluminação é montada e o projeto "Olimpic Praia" é realizado. A ideia era inscrever participantes para algumas disputas de uma olimpíadas etílicas e a diversão foi garantida. Quem ganhou? Até hoje ninguém sabe dado que até os juízes estavam bêbados.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2011</h3>
+					<p>O projeto "Mikapraia" tinha como visão expandir e consolidar o bloco como um dos melhores destinos do estado de São Paulo e norte paranaense.</p>
+					<p>Além da já famosa praia itinerante, o bloco investe pesado em atrações para embalar as noites e tardes de carnaval.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2010</h3>
+					<p>Nesse ano por alguns problemas com a administração municipal, o bloco é sediado na boate Dub's Disco Club.</p>
+					<p>Máquinas de espuma e uma grande estrutura fizeram o carnaval daquele ano ser um dos mais diferentes da história do bloco.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2009</h3>
+					<p>Em 2009 o projeto "Praia Adventure" faz as tardes e noites serem uma das mais agitadas do carnaval. Futebol de sabão, surf machine, parede de escalada são algumas das atrações do carnaval.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2008</h3>
+					<p>O Tô no Vaso alça a cidade de Palmital no circuito do carnaval regional. O projeto "Praia" é mantido, porém esse ano atrações ao vivo começam a tomar as areias da sede. Rodas de samba, Dj's, Acústicos e outras atrações agitam as tardes e as noites do Carnaval.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2007</h3>
+					<p>Depois da repercussão do ano anterior a prefeitura toma uma medida drástica e decide que nenhum bloco poderia se instalar pelas ruas da cidade.</p>
+					<p>Para evitar brigas, os blocos rivais deveriam ocupar as sedes em lados opostos do espaço, ficando alguns blocos de menor expressão entre os dois. O som seria interligado e comum a todos, controlados por uma central.</p>
+					<p>Sendo obrigado a compartilhar o espaço com outros blocos, o Tô no Vaso precisa ser criativo para chamar a atenção dos foliões e não desaponta: alguns caminhões de areia foram espalhados por todo o espaço da sede e então é criado a primeira praia itinerante do interior paulista.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2006</h3>
+					<p>Tentando sanar o problema da pertubação do sossego, a prefeitura cria o "Estação Folia" (molde usado até hoje no carnaval Palmitalense), porém o Tô no Vaso juntamente com mais alguns blocos não aderem a iniciativa e ficam sediados novamente no bar "Los Hermanos".</p>
+					<p>Considerado por muitos o melhor carnaval já feito até hoje, foi marcado por "enterros" ao bloco rival; os integrantes e simpatizantes marchavam pela manhã até a sede do bloco rival para celebrar a "morte" do mesmo, já que eles se encontravam fechados enquanto a festa ainda ocorria na sede do Tô no Vaso. Houve um placar para contabilizar os dias em que houveram enterros (todos os dias no caso), diversas marchas, disputa de som, algumas ocorrências policiais e muita, muita cerveja.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2005</h3>
+					<p>Nesse ano o Tô no Vaso volta a ficar sediado no bar "Los Hermanos" juntamente com o bloco "Nostravamus". O carnaval é marcado pela disputa de público com o bloco rival e isso acirra os ânimos de ambos os lados. Muitas reclamações de perturbação do sossego são registradas.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2004</h3>
+					<p>Já sendo considerado o maior bloco da cidade, um trio elétrico é montado para o carnaval e causa um grande transtorno logo na primeira noite, já que o caminhão juntamente com o sistema de som foram apreendidos pela PM. Nesse ano o bloco volta a ficar instalado na Kelpp's (hoje Rock Caramujo Club) e o bloco "atecubanos" se instala bem em frente, do outro lado da rua; uma verdadeira competição de som. Não por acaso esse ano ficou marcado pela intervenção da PM em quase todos os dias.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2003</h3>
+					<p>Em 2003 o Tô no Vaso é convidado juntamente com os blocos "Os Karakata", "Nostravamus" e "Atecubanos" para reerguerem o tradicional carnaval de salão do clube local. O acordo era que os blocos ficariam em uma mesma sede (antigo bar "Los Hermanos") e não poderiam abrir nas noites em que o clube promovesse festividades. Em uma estratégia desleal, um dos blocos, o "Atecubanos", rompe o acordo na última hora e decide se instalar em frente ao clube, concorrendo com todos. Essa atitude deu início a uma rivalidade que entrou para a história da cidade.</p>
+					<p>Esse ano também marca o primeiro ano em que há o consumo de cerveja no bloco e 80 caixas de cerveja Bohemia foram compradas.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2002</h3>
+					<p>Nesse ano o bloco Tô no Vaso fica instalado na rua Duque de Caxias e começa a incomodar outros blocos. Mesmo sem bebidas alcoólicas e outros atrativos, começa a reunir um grande número de pessoas. Com disposição de sobra pra alçar o bloco como um dos principais da cidade mesmo com a pouca idade, o Tô no Vaso ganha um carro (sim, um carro para o bloco onde nenhum integrante possuía CNH) em um pré carnaval. Dias depois, no carnaval, o carro foi destruído pelos próprios integrantes.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2001</h3>
+					<p>Em 2001, ainda com pouca idade, o Tô no Vaso já começa a chamar a atenção e atrair alguns foliões. O que antes era somente um pretexto para reunir um grupo de amigos, agora começa a ganhar forma com som locado.</p>
+					<p>Nesse ano uma briga entre integrantes quase é extinto. Para a nossa sorte a briga foi superada (Sim, somos amigos até hoje :D).</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>2000</h3>
+					<p>Ainda muito jovem o bloco se instala na principal avenida da cidade. Nesse ano já há ideias de "diferenciais" na estrutura. Piscinas e caixas d'água são colocadas no canteiro da avenida.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>1999</h3>
+					<p>Nesse ano não há uma sede própria e o bloco fica com um bloco chamado "Sempre a tôa" que era, em suma, formado pelos pais dos integrantes do bloco Tô no Vaso.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="Yearbook Yearbook--right">
+
+			<div class="Yearbook-background"></div>
+			<div class="Yearbook-inner">
+
+				<div class="Yearbook-primary">
+					<img src="https://s-media-cache-ak0.pinimg.com/236x/36/81/10/3681102ae7e95c7a5a095d7a97107230.jpg"
+					     alt="Camiseta to no vaso">
+				</div>
+
+				<div class="Yearbook-secondary">
+
+					<h3>1998</h3>
+					<p>O bloco Tô no Vaso foi criado e fundado em 1998 por um grupo de amigos e teve como primeira sede a antiga danceteria "Kelpp's" (hoje Rock Caramujo Club). Com a intenção de reunir todos para comemorar o carnaval e participar de matinês, nessa época foram confeccionadas algumas camisetas para os integrantes e o carnaval todo foi regado a muito refrigerante.</p>
+
+					<div class="YearbookGallery">
+
+						<ul class="YearbookGallery-list">
+
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+							<li class="YearbookGalleryItem"></li>
+
+						</ul>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
 
 	</div>
 
