Add final about content

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,21 @@
 <title>TNV | Bloco Tô No Vaso - Palmital</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+<link rel="canonical" href="https://tonovaso.com.br/social"/>
+<meta property="og:url" content="https://tonovaso.com.br/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
+<meta property="og:description" content="Bloco TnV">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="800">
+<meta property="fb:pages" content="440721119282308">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@tonovaso">
+<meta name="twitter:title" content="TNV | Bloco Tô No Vaso - Palmital">
+<meta name="twitter:description" content="Bloco TnV">
+<meta name="twitter:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
 <meta id="theme-color" name="theme-color" content="#eeeeee"/>
 <script src="https://use.typekit.net/jhl4ayv.js"></script>
 <!--<script>try{Typekit.load({ async: true });}catch(e){}</script>-->
@@ -186,6 +201,63 @@
 
 </header>
 
+<section id="sobre" class="About grey-50">
+
+	<div class="About-inner container">
+
+		<div class="Paragraph font-brown-900">
+
+			<div class="Paragraph-inner">
+
+				<h2 class="font-amber-a700">20 anos de Open Bar</h2>
+
+				<p>O Carnaval da região ganhou um novo capítulo em 1998, ano de fundação do bloco Tô no Vaso.</p>
+
+				<p>De lá pra cá, depois de alguns carnavais percebemos que poderíamos ser referência para os foliões da região e começamos um trabalho para trazer as melhores novidades ano a ano.</p>
+
+				<p>Para comemorar duas décadas de festa, não poderíamos deixar de fazer algo especial em 2017 e para isso teremos para cada dia de festa uma temática diferente.</p>
+
+				<p>Então prepare seu chinelo, seu abadá, acesse nossa página no <a href="https://www.facebook.com/tonovaso.palmital/">Facebook</a> e fique por dentro de todas as novidades que irão surgir até o começo do carnaval!</p>
+
+			</div>
+
+		</div>
+
+		<div class="Paragraph font-brown-900">
+
+			<div class="Paragraph-inner" style="display:flex;flex-flow:column;align-items:flex-end;text-align:right;">
+
+				<h2 class="font-amber-a700">Como funciona?</h2>
+
+				<p>O TNV se orgulha de ser uma "maratona Open Bar". São 66 HORAS de bebida liberada, divididos em 5 dias de festa, montado em um complexo que conta com lounge, banheiros, tendas, palcos, uma praia itinerante com iluminação, muita música e muita gente bonita.</p>
+
+				<p>As bebidas são liberadas à partir da sexta ás 14h e indo até às 04h, seguindo assim até na terça às 0h onde a festa acaba temporiariamente até o próximo ano :D</p>
+
+			</div>
+
+		</div>
+
+		<div class="Paragraph font-brown-900">
+
+			<div class="Paragraph-inner">
+
+				<h2 class="font-amber-a700">Como Participar</h2>
+
+				<p>Para curtir o melhor carnaval da região, temos duas opções: os pacotes e as diárias.</p>
+				<p>Os Pacotes femininos e masculinos dão direito a entrada no complexo TNV todos os cinco dias de festa e mais o abadá.</p>
+				<p>Já as diárias dão direito a entrada no complexo TNV no dia escolhido pelo folião.</p>
+				<p>Tanto os vouchers de pacotes quanto os vouchers de diárias serão trocadas pelas pulseiras de acesso à partir do dia 24/02/2017 diretamente na portaria do bloco.</p>
+				<p>Já os abadás (tanto na compra avulsa quanto de pacotes), poderão ser retirados à partir do dia 15/02/2017 nos locais credenciados ou na portaria do bloco à partir do dia 24/02/2017.</p>
+				<p>Ou seja, de pacote ou diária, sua festa vai ser garantida com muita bebida e uma estrutura de fazer Dodô e Osmar pensarem em descer do trio!</p>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
 <script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
 
@@ -197,8 +269,6 @@
 		duration: 600,
 		easing: 'easeInQuad'
 	});
-
-//	var playerAnchor = new Anchor(document.getElementById('player'), 600, 'easeInCubic');
 
 </script>
 
